# Biome_He

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  forge.config.ts  package-lock.json  package.json  shell.nix  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.preload.config.ts  vite.renderer.config.ts
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/audio/: ATTRIBUTION.md
electron/: main.ts  preload.ts
electron/ipc/: backgrounds.ts  config.ts  debug.ts  engine.ts  index.ts  models.ts  seeds.ts  server.ts  settings.ts  window.ts
electron/lib/: constants.ts  ipcUtils.ts  paths.ts  platform.ts  seeds.ts  serverFiles.ts  serverState.ts  uv.ts  uvSync.ts
scripts/: release.mjs
server-components/: README.md  action_logger.py  engine_manager.py  image_gen.py  inpainting_manager.py  progress_stages.py  pyproject.toml  qwen_tool_parser.py  safety.py  server.py  server_logging.py  system_info.py
src/: App.tsx  bridge.ts  constants.ts  main.tsx  stages.json  styles.ts  transitions.ts
src/components/: AudioController.tsx  BackgroundSlideshow.tsx  ConnectionLostOverlay.tsx  DebugMetricsOverlay.tsx  EngineInstallModal.tsx  EulaModal.tsx  FrameTimelineOverlay.tsx  GooseMode.tsx  I18nSync.tsx  InputOverlay.tsx  MenuSettingsView.tsx  PauseMainView.tsx  PauseOverlay.tsx  PauseScenesView.tsx  PerformanceStatsOverlay.tsx  PortalPreview.tsx  PortalSparks.tsx  PortalSparksConfigurator.tsx  SceneCard.tsx  SceneEditOverlay.tsx  SceneGrid.tsx  ServerLogDisplay.tsx  SocialCtaRow.tsx  Sparkline.tsx  TerminalDisplay.tsx  VideoContainer.tsx  VortexHost.tsx  WindowControls.tsx  WorldEngineSection.tsx
src/components/ui/: Button.tsx  ConfirmModal.tsx  MenuButton.tsx  Modal.tsx  OverlayModal.tsx  RawButton.tsx  RawMenuButton.tsx  RawSettingsButton.tsx  SettingsButton.tsx  SettingsCheckbox.tsx  SettingsKeybind.tsx  SettingsSection.tsx  SettingsSelect.tsx  SettingsSlider.tsx  SettingsTextInput.tsx  SettingsToggle.tsx  ViewLabel.tsx
src/constants/: configShared.ts
src/context/: AudioContext.tsx  PortalContext.tsx  StreamingContext.tsx  VortexContext.tsx  portalStateMachine.ts  sceneEditMachine.ts  streamingContextTypes.ts  streamingLifecycleEffects.ts  streamingLifecycleMachine.ts  streamingLifecyclePayload.ts  streamingWarmConnection.ts
src/css/: animations.css  app.css  video-mask.css
src/hooks/: useAppStartup.ts  useBackgroundCycle.ts  useConfig.tsx  useEngine.ts  useEngineLogs.ts  useGameInput.ts  usePinnedScenes.ts  usePointerLockFeedback.ts  usePortalGlowSample.ts  usePortalMediaMount.ts  useSceneActions.ts  useSceneGlowColor.ts  useSeedManager.ts  useSeeds.ts  useSettings.tsx  useUISound.ts  useVolumeControls.ts  useWebSocket.ts  useWindow.ts
src/i18n/: en.ts  goose.ts  he.ts  i18next.d.ts  index.ts  ja.ts  locales.ts  resources.ts  zh.ts
src/lib/: audioEngine.ts  diagnosticsPayload.ts  portalSparksRenderer.ts  portalSparksTuning.json  portalSparksTuning.ts  sparkDebug.ts  vortexRenderer.ts  wsRpc.ts
src/lib/audio/: AudioEngine.ts  index.ts  registry.ts  synthEffects.ts  synthMusic.ts  synthUI.ts  synthUtils.ts  synthVortex.ts  types.ts
src/types/: app.ts  globals.d.ts  ipc.ts  settings.ts  ws.ts
src/utils/: serverUrl.ts
