[project]
name = "biome-server"
version = "1.0.0-rc3"
requires-python = "==3.12.*"
dependencies = [
  "world-engine @ https://github.com/Overworldai/world_engine/archive/d34a3e8a45b68fa107d73e6ffc2a2d6a99295a28.zip",
  "torch",
  "torchvision",
  "pillow",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "httpx>=0.27.0",
  "websockets>=15.0.1",
  "hf-xet>=1.0.0",
  "transformers>=4.60.0",
  "timm>=0.9.0",
  "py-cpuinfo>=9.0.0",
  "pynvml>=12.0.0",
  "simplejpeg>=1.7.0",
  "diffusers>=0.25.0",
  "accelerate>=0.25.0",
  "peft>=0.7.0",
  "bitsandbytes>=0.41.0",
  "llama-cpp-python",
  "gguf>=0.6.0",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
llama-cpp-python = { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.33-cu128-Basic-linux-20260315/llama_cpp_python-0.3.33%2Bcu128.basic-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

